--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
       <version>0.9.20</version>
    </dependency>
 
+   <dependency>
+     <groupId>com.typesafe.akka</groupId>
+     <artifactId>akka-actor_2.10</artifactId>
+     <version>2.3.14</version>
+   </dependency>
+
   </dependencies>
 
   <build>
