--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
      <version>2.3.14</version>
    </dependency>
 
+   <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jetty-util</artifactId>
+      <version>6.1.25</version>
+   </dependency>
+
   </dependencies>
 
   <build>
