--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 .classpath
 .project
-dependency-reduced-pom.xml
 target/
 jboss-weekly-*.sh
 *.ics
-dummy-staled-email
-stale-emails/
+src/main/resources/application.properties
